# SoCalPython.org

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  Pipfile  README.md  README.rst  SoCalPython.com.lektorproject  justfile  modd.conf  netlify.toml  pyproject.toml
.github/workflows/: trigger_netlify_deploy.yml
assets/static/style/: _fonts.scss
content/: contents.lr
content/about/: contents.lr
content/code-of-conduct/: contents.lr
content/github/: contents.lr
content/meetup/: contents.lr
content/slack/: contents.lr
content/speaking/: contents.lr
content/sponsorship/: contents.lr
content/twitter/: contents.lr
input/: index.md
input/about/: index.md
input/assets/style/: _fonts.scss  _main.scss  style.scss
input/bluesky/: index.md
input/buttondown/: index.md
input/code-of-conduct/: index.md
input/conduct/: index.md
input/contact/: index.md
input/github/: index.md
input/in-memoriam-michael/: index.md
input/luma/: index.md
input/mastodon/: index.md
input/meetup/: index.md
input/organizers/: index.md
input/slack/: index.md
input/speaking/: index.md
input/sponsorship/: index.md
input/twitter/: index.md
scripts/: get_in_memoriam_csv.py  netlify_deploy.sh
templates/: default.html  layout.html  page.html  redirect.html
